plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.Dolmeng-E'
version = '0.0.1-SNAPSHOT'
description = 'Calendar Web Application'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // 메일전송
    implementation 'org.springframework.boot:spring-boot-starter-mail'

	//    eureka client의존성 추가
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

	//    msa간에 통신을 위한 openfeign의존성 추가
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	implementation 'software.amazon.awssdk:s3:2.17.58'

    // 공통 모듈 의존성
    implementation "com.example:module-common:1.1.2"
}

repositories {
	maven {
		url = uri("https://maven.pkg.github.com/EunDuk2/module-common")
		credentials {
			username = findProperty("GITHUB_USER") ?: System.getenv("GITHUB_USER")
			password = findProperty("GITHUB_TOKEN") ?: System.getenv("GITHUB_TOKEN")
		}
	}
	mavenCentral()
}

dependencyManagement{
	imports{
		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2024.0.0'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
